--- a/hihocoder/20160807-Offer/Work2/Work2/Work2.vcxproj.filters
+++ b/hihocoder/20160807-Offer/Work2/Work2/Work2.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Work2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
