--- a/hihocoder/20160828-Offer/Work1/Work1/Work1.vcxproj.filters
+++ b/hihocoder/20160828-Offer/Work1/Work1/Work1.vcxproj.filters
@@ -32,10 +32,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="BrowserCaching.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="Work1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
