--- a/hihocoder/20160821-Offer/Work2/Work2/Work2.vcxproj
+++ b/hihocoder/20160821-Offer/Work2/Work2/Work2.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{FDC48060-B02B-4EBB-971F-F890FCF0F1F0}</ProjectGuid>
+    <ProjectGuid>{D9B76269-4C1C-4984-8E2C-A5D68A2EA7D2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BrowserCaching</RootNamespace>
+    <RootNamespace>Work2</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -84,12 +84,12 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BrowserCaching.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="Work2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
