--- a/hihocoder/20160828-Offer/Work2-PictureAssign/Work2-PictureAssign/Work2-PictureAssign.vcxproj
+++ b/hihocoder/20160828-Offer/Work2-PictureAssign/Work2-PictureAssign/Work2-PictureAssign.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{FDC48060-B02B-4EBB-971F-F890FCF0F1F0}</ProjectGuid>
+    <ProjectGuid>{9B57561D-52D9-40F0-9A82-C53689805E6D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BrowserCaching</RootNamespace>
+    <RootNamespace>Work2PictureAssign</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -84,12 +84,11 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BrowserCaching.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="Work2-PictureAssign.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
