--- a/hihocoder/20160828-Offer/Work2-PictureAssign/Work2-PictureAssign/Work2-PictureAssign.vcxproj.filters
+++ b/hihocoder/20160828-Offer/Work2-PictureAssign/Work2-PictureAssign/Work2-PictureAssign.vcxproj.filters
@@ -32,10 +32,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="BrowserCaching.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="Work2-PictureAssign.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
